--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,19 +1,24 @@
-<h2>Login</h2>
-<section class="form-box">
-  <form class="login-form">
-  <div>
-    <label for="email-login">Username</label>
-    <input type="text" id="email-login"/>
-  </div>
-  <div>
-    <label for="password-login">Password</label>
-    <input type="password" id="password-login"/>
-  </div>
-  <div>
-    <button type="submit" id="submit">Login!</button>
-  </div>
-  <a href="/signup"><span id="signup-instead">Sign up instead</span></a>
-</section>
-</form>
-</section>
+<div class="flex-sub">
+    <section class="login-section"> 
+        
+        <div class="login-header">
+            <h2>Welcome Back!</h2>
+        </div>
+
+        <div class="login-main">
+            <form class="login-form">
+                <label for="username">Username:</label><br>
+                <input type="text" id="username-login" name="username-login">
+
+                <label for="password">Password:</label><br>
+                <input type="text" id="password-login" name="password-login">
+
+                <button type="submit" id="login-button" class="btn">Log In</button>
+                <a href="/signup" class="form-link">Create an account.</a>
+            </form>
+        </div>
+
+    </section>
+</div>
+
 <script src="/javascript/login.js"></script>
