--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,3 +1,11 @@
-<h4><a href="/post/{{id}}">{{title}}</a></h4>
-<p><a href="{{url}}" target="_blank">{{url}}</a></p>
-<p class="blue-text">{{comments.length}} comments</p>
+<div class="itinerary-header">
+    <h2>Itinerary Idea</h2>
+</div> 
+
+<div class="itinerary-main">
+    <div class="itinerary-item">
+        <h4><a href="/post/{{id}}">Larimer Square</a></h4>
+        <p><a href="">https://www.larimersquare.com/</a></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id nisl varius, pharetra velit quis, pretium est. Fusce imperdiet bibendum sagittis. Donec eu interdum mauris. Cras id urna venenatis augue sollicitudin pulvinar ac at felis. Proin rutrum lorem neque, nec venenatis elit pretium quis. Morbi elementum vehicula turpis at dictum. Aliquam mollis metus sed interdum malesuada. In id faucibus turpis. Fusce et tellus eu ante consequat pellentesque porta vel libero. Aenean mollis tincidunt nunc, quis feugiat nisl venenatis vitae. Integer suscipit est nec dui dictum, eget dictum mi vehicula. Duis nisi lectus, placerat nec leo eget, blandit mattis ligula.</p>
+    </div>
+</div>
