--- a/utils/styles.css
+++ b/utils/styles.css
@@ -84,7 +84,7 @@ p {
 }
 
 .hero {
-    background-image: url('./images/Pine Forest at Sunrise.jpg');
+    background-image: url('/images/Pine Forest at Sunrise.jpg');
     background-size: cover;
     background-position: 50%;
     padding: 150px 0 40px 0;
@@ -173,6 +173,8 @@ p {
 .signup-section,
 .trip-info-section,
 .itinerary-section,
+.itinerary-add-section,
+.itinerary-view-section,
 .to-do-section {
     border-radius: 5px;
     background-color: white;
@@ -180,9 +182,17 @@ p {
 
 .login-section,
 .signup-section,
-.trip-info-section {
+.trip-info-section,
+.itinerary-add-section,
+.itinerary-view-section {
     width: 50%;
-    margin-top: -80px;
+    margin-top: -60px;
+}
+
+.itinerary-view-section
+{
+    width: 90%;
+    margin-top: -60px;
 }
 
 .login-main,
