--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -22,7 +22,7 @@
         <section class="top-section">
             <div class="location">
                 <p class="blue-text">Your Trip to:</p>
-                <h3>{{location}}</h3>
+                <h3>Denver</h3>
             </div>
             <div class="dates">
                 <p class="blue-text">Travel Dates:</p> 
@@ -37,7 +37,9 @@
                 <div class="itinerary-header">
                     <h2>Itinerary Ideas</h2>
                     <div class="plus">
+                        <a href="/dashboard/create">
                         <img src="images/plus.svg" width="20px">
+                        </a>
                     </div>
                 </div>
 
