--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -8,13 +8,13 @@
         <div class="signup-main">
             <form class="signup-form">
                 <label for="username-login">Username:</label><br>
-                <input type="text" id="username-login" name="username">
+                <input type="text" id="username-signup" name="username">
 
                 <label for="password-signup">Password:</label><br>
                 <input type="text" id="password-signup" name="password">
 
-                <label for="group-id-insert">Group ID:</label><br>
-                <input type="text" id="group-id" name="group-id">
+                <label for="trip-id-insert">Group ID:</label><br>
+                <input type="text" id="trip-id" name="trip-id">
 
                 <input type="radio" id="radio-button" name="need-id-confirm" value="need-id-confirm">
                 <label for="javascript">I don't have a Group ID, create one!</label><br>
