--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -9,7 +9,7 @@
         <div class="itinerary-main">
             <div class="itinerary-item">
 
-                    <form class="to-do">
+                    <form class="add-post">
                         <label for="title">Title:</label><br>
                         <input type="text" id="itinerary-title" name="itinerary-title">
 
@@ -19,7 +19,7 @@
                         <label for="notes">Notes:</label><br>
                         <textarea type="text" id="itinerary-notes" name="itinerary-notes"></textarea>
 
-                        <button id="to-do-add-button" class="btn">Post</button>
+                        <button id="add-post-button" class="btn">Post</button>
                     </form>
             </div>
         </div>
@@ -27,3 +27,5 @@
     </section>
 
 </div>
+
+<script src="/javascript/add-post.js"></script>
