--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,10 +2,11 @@
     <section class="homepage-section"> 
 
         <div class="homepage-header">
-            <h1>Welcome to Trip Planner!</h1>
-            <h5>Your one-stop-spot for planning a trip with your family and friends!</h5>
-            <button type="submit" id="signup-page-button" class="homepage-btn btn">Sign Up</button>
-            <button type="submit" id="login-page-button" class="homepage-btn btn">Log in</button>
+            <h1>Welcome to TravelSphere!</h1>
+            <h5>Your one-stop for trip planning with your circle of family and friends!</h5>
+            <div class="home-button-section">
+                <h4><a href="/signup">Let's get started!</a></h4>
+            </div>
         </div>
 
     </section>
