--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -4,8 +4,8 @@
 
         {{#each this}}
         <div class="comments">
-            <p class="blue-text">Josh Says:</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+            <p class="blue-text">{{member.username}} says:</p>
+            <p>{{comment_text}}</p>
         </div>
         {{/each}}
     </div>
