--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,8 +1,10 @@
 <div class="flex-sub">
-    <section class="signup-section"> 
+    <section class="signup-section">
 
         <div class="signup-header">
-            <h2>Let's Get Started!</h2>
+            <h2>
+                Create an Account:
+            </h2>
         </div>
 
         <div class="signup-main">
@@ -11,14 +13,14 @@
                 <input type="text" id="username-signup" name="username">
 
                 <label for="password-signup">Password:</label><br>
-                <input type="text" id="password-signup" name="password">
+                <input type="password" id="password-signup" name="password">
 
-                <label for="trip-id-insert">Group ID:</label><br>
+                <label for="trip-id-insert">Trip ID:</label><br>
                 <input type="text" id="trip-id" name="trip-id">
 
                 <input type="radio" id="radio-button" name="need-id-confirm" value="need-id-confirm">
                 <label for="javascript">I don't have a Group ID, create one!</label><br>
-                
+
                 <button type="submit" id="signup-button" class="btn">Sign Up</button>
                 <a href="/login" class="form-link">Already have an account? Log in.</a>
             </form>
