--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
                 <input type="text" id="username-login" name="username-login">
 
                 <label for="password">Password:</label><br>
-                <input type="text" id="password-login" name="password-login">
+                <input type="password" id="password-login" name="password-login">
 
                 <button type="submit" id="login-button" class="btn">Log In</button>
                 <a href="/signup" class="form-link">Create an account.</a>
