--- a/views/trip-info.handlebars
+++ b/views/trip-info.handlebars
@@ -1,12 +1,12 @@
 <div class="flex-sub">
-    <section class="trip-info-section"> 
+    <section class="trip-info-section">
 
         <div class="trip-info-header">
-            <h2>Your Group ID is: 1234</h2>
+            <h2>Tell us about your trip:</h2>
         </div>
 
         <div class="trip-info-main">
-            <form class="trip-info">
+            <form class="trip-info-form">
                 <label for="location">Trip Location:</label><br>
                 <input type="text" id="location" name="location">
 
