trying to figure out sign up functionality

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,7 @@
             <h1>Welcome to TravelSphere!</h1>
             <h5>Your one-stop for trip planning with your circle of family and friends!</h5>
             <div class="home-button-section">
-                <h4><a href="/start">Let's get started!</a></h4>
+                <h4><a href="/signup">Let's get started!</a></h4>
             </div>
         </div>
 
