--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,7 @@
             {{else}}
             <a href="/login" class="nav-item">Login</a>
             <a href="/signup" class="nav-item">Sign up</a>
+            <a href="/trip-info" class="nav-item">Create a Trip</a>
             {{/if}}
         </nav>
     </header>
