--- a/views/trip-info.handlebars
+++ b/views/trip-info.handlebars
@@ -15,7 +15,7 @@
 
                 <label for="end-date">End Date:</label><br>
                 <input type="text" id="end-date" name="end-date">
-                <button type="submit" id="trip-info-button" class="btn">Continue to dashboard!</button>
+                <button type="submit" id="trip-info-button" class="btn">Create</button>
             </form>
         </div>
 
