--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
         <link rel="stylesheet" href="https://use.typekit.net/qsc3hpo.css">
-        <title>Project 2 Template</title>
+        <title>TriviaSphere</title>
+        <link rel="icon" type="image/x-icon" href="/images/pindrop-green.svg">
     </head>
 
     <header>
