--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -50,7 +50,7 @@
                     <div class="itinerary-item">
                         <h4><a href="/dashboard/{{id}}">{{title}}</a></h4>
                         <p><a href="{{url}}">{{url}}</a></p>
-                        <p class="blue-text">{{comments.length}} comments</p>
+                        <p><a href="/dashboard/{{id}}" class="blue-text">{{comments.length}} {{format_plural "comment" comments.length}}</a></p>
                     </div>
                     {{/each}}
                 </div>   
