finished readme and updated code

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -16,6 +16,7 @@
                 <input type="password" id="password-signup" name="password">
 
                 <label for="trip-id-insert">Trip ID:</label><br>
+                <p>If you don't have a Trip ID, <a href="/trip-info">click here</a> to generate one!</p>
                 <input type="text" id="trip-id" name="trip-id">
 
                 <button type="submit" id="signup-button" class="btn">Sign Up</button>
