--- a/views/trip-info.handlebars
+++ b/views/trip-info.handlebars
@@ -2,7 +2,7 @@
     <section class="trip-info-section">
 
         <div class="trip-info-header">
-            <h2 id="success-message">Create a Trip: </h2>
+            <h2 id="success-message">Create a Trip to Generate a Unique ID: </h2>
         </div>
 
         <div class="trip-info-main">
@@ -15,7 +15,9 @@
 
                 <label for="end-date">End Date:</label><br>
                 <input type="text" id="end-date" name="end-date">
+
                 <button type="submit" id="trip-info-button" class="btn">Create</button>
+                <a href="/signup" class="form-link">Already have a unique ID? Sign up instead.</a>
             </form>
         </div>
 
